Validate IP in settings
Added pattern in app.json so the IP address gets checked for IPv4
validity when changing settings.

--- a/app.json
+++ b/app.json
@@ -261,6 +261,7 @@
               {
                 "id": "settingIPAddress",
                 "type": "text",
+                "pattern": "^(([01]?\\d\\d?|2[0-4]\\d|25[0-5]).){3}([01]?\\d\\d?|2[0-4]\\d|25[0-5])$",
                 "label": {
                   "en": "IP address",
                   "nl": "IP adres"
